Bug 636114 - Crash [@ PluginBackgroundSink::~PluginBackgroundSink() ]; r=jones.chris.g approval2.0=johnath